@@ -35,7 +35,7 @@ import org.jdom.Element;
 
 /**
  * @author mog
- * @version $Id: RemoteSlave.java,v 1.42 2004/06/04 14:18:55 mog Exp $
+ * @version $Id: RemoteSlave.java,v 1.43 2004/06/04 21:34:28 mog Exp $
  */
 public class RemoteSlave implements Comparable {
 	/**
@@ -64,25 +64,25 @@ public class RemoteSlave implements Comparable {
 	private SlaveStatus _status;
 	private Properties _config;
 
-	public void oldRemoteSlave(String name, Collection masks) {
-		if (name.equalsIgnoreCase("all"))
-			throw new IllegalArgumentException(
-				name
-					+ " is a reserved keyword, it can't be used as a slave name");
-		_name = name;
-		_masks = masks;
-	}
-
-	public void oldRemoteSlave(String name, Collection masks, Element config) {
-		//this(name, masks);
-		for (Iterator i = config.getChildren().iterator(); i.hasNext();) {
-			Element e = (Element) i.next();
-			try {
-				_config.put(e.getName(), e.getText());
-			} catch (Exception e1) {
-			}
-		}
-	}
+//	public void oldRemoteSlave(String name, Collection masks) {
+//		if (name.equalsIgnoreCase("all"))
+//			throw new IllegalArgumentException(
+//				name
+//					+ " is a reserved keyword, it can't be used as a slave name");
+//		_name = name;
+//		_masks = masks;
+//	}
+//
+//	public void oldRemoteSlave(String name, Collection masks, Element config) {
+//		//this(name, masks);
+//		for (Iterator i = config.getChildren().iterator(); i.hasNext();) {
+//			Element e = (Element) i.next();
+//			try {
+//				_config.put(e.getName(), e.getText());
+//			} catch (Exception e1) {
+//			}
+//		}
+//	}
 
 	public RemoteSlave(Properties config) {
 		String name = FtpConfig.getProperty(config, "name");
